[gd_scene load_steps=3 format=2]

[ext_resource path="res://gui/bind_button.gd" type="Script" id=1]
[ext_resource path="res://gui/OK.gd" type="Script" id=2]

[node name="Screen" type="Control" index="0"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -233.0
margin_top = 2.0
margin_right = 265.0
margin_bottom = 2.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Title" type="Label" parent="." index="0"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -112.0
margin_top = 41.0
margin_right = 107.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Choose your inputs for the powers"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Bindings" type="HBoxContainer" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.5
margin_top = -202.0
margin_right = 96.5
margin_bottom = 202.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="Labels" type="VBoxContainer" parent="Bindings" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 97.0
margin_bottom = 404.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="SimpleBullet" type="Label" parent="Bindings/Labels" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 97.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Simple Bullet"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Rect" ]

[node name="Trap" type="Label" parent="Bindings/Labels" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 97.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Trap"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="TracerBullet" type="Label" parent="Bindings/Labels" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 48.0
margin_right = 97.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Tracer Bullet"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Dash" type="Label" parent="Bindings/Labels" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 72.0
margin_right = 97.0
margin_bottom = 92.0
rect_min_size = Vector2( 0, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Dash"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="GhostBullet" type="Label" parent="Bindings/Labels" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 96.0
margin_right = 97.0
margin_bottom = 116.0
rect_min_size = Vector2( 0, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Ghost Bullet"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Wormhole" type="Label" parent="Bindings/Labels" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 120.0
margin_right = 97.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Wormhole"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Armor" type="Label" parent="Bindings/Labels" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 144.0
margin_right = 97.0
margin_bottom = 164.0
rect_min_size = Vector2( 0, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Armor"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="IonBullet" type="Label" parent="Bindings/Labels" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 168.0
margin_right = 97.0
margin_bottom = 188.0
rect_min_size = Vector2( 0, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Ion Bullet"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CureBullet" type="Label" parent="Bindings/Labels" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 192.0
margin_right = 97.0
margin_bottom = 212.0
rect_min_size = Vector2( 0, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Cure Bullet"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="GuidedButton" type="Label" parent="Bindings/Labels" index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 216.0
margin_right = 97.0
margin_bottom = 236.0
rect_min_size = Vector2( 0, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Guided Bullet"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Shotgun" type="Label" parent="Bindings/Labels" index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 240.0
margin_right = 97.0
margin_bottom = 260.0
rect_min_size = Vector2( 0, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Shotgun"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="RicochetBullet" type="Label" parent="Bindings/Labels" index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 264.0
margin_right = 97.0
margin_bottom = 284.0
rect_min_size = Vector2( 0, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Ricochet Bullet"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Storm" type="Label" parent="Bindings/Labels" index="12"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 288.0
margin_right = 97.0
margin_bottom = 308.0
rect_min_size = Vector2( 0, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Storm"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ChargeBullet" type="Label" parent="Bindings/Labels" index="13"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 312.0
margin_right = 97.0
margin_bottom = 332.0
rect_min_size = Vector2( 0, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Charge Bullet"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Laser" type="Label" parent="Bindings/Labels" index="14"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 336.0
margin_right = 97.0
margin_bottom = 356.0
rect_min_size = Vector2( 0, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Laser"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Flamethrower" type="Label" parent="Bindings/Labels" index="15"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 360.0
margin_right = 97.0
margin_bottom = 380.0
rect_min_size = Vector2( 0, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Flamethrower"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DoubleBullet" type="Label" parent="Bindings/Labels" index="16"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 384.0
margin_right = 97.0
margin_bottom = 404.0
rect_min_size = Vector2( 0, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Double Bullet"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="Buttons" type="VBoxContainer" parent="Bindings" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 101.0
margin_right = 193.0
margin_bottom = 404.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
script = ExtResource( 1 )

[node name="SimpleBullet" type="Button" parent="Bindings/Buttons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 92.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "<undefined>"
flat = false
align = 1

[node name="Trap" type="Button" parent="Bindings/Buttons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 92.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "<undefined>"
flat = false
align = 1

[node name="TracerBullet" type="Button" parent="Bindings/Buttons" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 48.0
margin_right = 92.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "<undefined>"
flat = false
align = 1

[node name="Dash" type="Button" parent="Bindings/Buttons" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 72.0
margin_right = 92.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "<undefined>"
flat = false
align = 1

[node name="GhostBullet" type="Button" parent="Bindings/Buttons" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 96.0
margin_right = 92.0
margin_bottom = 116.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "<undefined>"
flat = false
align = 1

[node name="Wormhole" type="Button" parent="Bindings/Buttons" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 120.0
margin_right = 92.0
margin_bottom = 140.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "<undefined>"
flat = false
align = 1

[node name="Armor" type="Button" parent="Bindings/Buttons" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 144.0
margin_right = 92.0
margin_bottom = 164.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "<undefined>"
flat = false
align = 1

[node name="IonBullet" type="Button" parent="Bindings/Buttons" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 168.0
margin_right = 92.0
margin_bottom = 188.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "<undefined>"
flat = false
align = 1

[node name="CureBullet" type="Button" parent="Bindings/Buttons" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 192.0
margin_right = 92.0
margin_bottom = 212.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "<undefined>"
flat = false
align = 1

[node name="GuidedBullet" type="Button" parent="Bindings/Buttons" index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 216.0
margin_right = 92.0
margin_bottom = 236.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "<undefined>"
flat = false
align = 1

[node name="Shotgun" type="Button" parent="Bindings/Buttons" index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 240.0
margin_right = 92.0
margin_bottom = 260.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "<undefined>"
flat = false
align = 1

[node name="RicochetBullet" type="Button" parent="Bindings/Buttons" index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 264.0
margin_right = 92.0
margin_bottom = 284.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "<undefined>"
flat = false
align = 1

[node name="Storm" type="Button" parent="Bindings/Buttons" index="12"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 288.0
margin_right = 92.0
margin_bottom = 308.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "<undefined>"
flat = false
align = 1

[node name="ChargeBullet" type="Button" parent="Bindings/Buttons" index="13"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 312.0
margin_right = 92.0
margin_bottom = 332.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "<undefined>"
flat = false
align = 1

[node name="Laser" type="Button" parent="Bindings/Buttons" index="14"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 336.0
margin_right = 92.0
margin_bottom = 356.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "<undefined>"
flat = false
align = 1

[node name="Flamethrower" type="Button" parent="Bindings/Buttons" index="15"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 360.0
margin_right = 92.0
margin_bottom = 380.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "<undefined>"
flat = false
align = 1

[node name="DoubleBullet" type="Button" parent="Bindings/Buttons" index="16"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 384.0
margin_right = 92.0
margin_bottom = 404.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "<undefined>"
flat = false
align = 1

[node name="OK" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -140.0
margin_right = 5.0
margin_bottom = -98.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "OK"
flat = false
align = 1
script = ExtResource( 2 )

[connection signal="pressed" from="Bindings/Buttons/SimpleBullet" to="Bindings/Buttons" method="_on_SimpleBullet_pressed"]

[connection signal="pressed" from="Bindings/Buttons/Trap" to="Bindings/Buttons" method="_on_Trap_pressed"]

[connection signal="pressed" from="Bindings/Buttons/TracerBullet" to="Bindings/Buttons" method="_on_TracerBullet_pressed"]

[connection signal="pressed" from="Bindings/Buttons/Dash" to="Bindings/Buttons" method="_on_Dash_pressed"]

[connection signal="pressed" from="Bindings/Buttons/GhostBullet" to="Bindings/Buttons" method="_on_GhostBullet_pressed"]

[connection signal="pressed" from="Bindings/Buttons/Wormhole" to="Bindings/Buttons" method="_on_Wormhole_pressed"]

[connection signal="pressed" from="Bindings/Buttons/Armor" to="Bindings/Buttons" method="_on_Armor_pressed"]

[connection signal="pressed" from="Bindings/Buttons/IonBullet" to="Bindings/Buttons" method="_on_IonBullet_pressed"]

[connection signal="pressed" from="Bindings/Buttons/CureBullet" to="Bindings/Buttons" method="_on_CureBullet_pressed"]

[connection signal="pressed" from="Bindings/Buttons/GuidedBullet" to="Bindings/Buttons" method="_on_GuidedBullet_pressed"]

[connection signal="pressed" from="Bindings/Buttons/Shotgun" to="Bindings/Buttons" method="_on_Shotgun_pressed"]

[connection signal="pressed" from="Bindings/Buttons/RicochetBullet" to="Bindings/Buttons" method="_on_RicochetBullet_pressed"]

[connection signal="pressed" from="Bindings/Buttons/Storm" to="Bindings/Buttons" method="_on_Storm_pressed"]

[connection signal="pressed" from="Bindings/Buttons/ChargeBullet" to="Bindings/Buttons" method="_on_ChargeBullet_pressed"]

[connection signal="pressed" from="Bindings/Buttons/Laser" to="Bindings/Buttons" method="_on_Laser_pressed"]

[connection signal="pressed" from="Bindings/Buttons/Flamethrower" to="Bindings/Buttons" method="_on_Flamethrower_pressed"]

[connection signal="pressed" from="Bindings/Buttons/DoubleBullet" to="Bindings/Buttons" method="_on_DoubleBullet_pressed"]


